--- a/public/sass/pages/_inicio.scss
+++ b/public/sass/pages/_inicio.scss
@@ -122,7 +122,7 @@
         }
 
         @include respond(small-phone) {
-            width: 125%;
+            width: 121%;
             top: 25%;
             left: -12%;
         }
